# kivy_cline_test

./: .gitignore  main.kv  main.py  pyproject.toml
