[tool.poetry]
name = "kivy-cline-test"
version = "0.1.0"
description = "Kivy & Python project for classification and learning modes"
authors = ["Your Name <email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
kivy = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
